# action_ws

./: .gitignore  .gitmodules  README.md  branch_sync.sh  install-ws-ubuntu.sh
src/depthai-perception/rgbd-pointcloud/: main.py
src/drake_opt/: CMakeLists.txt  package.xml
src/drake_opt/drake_ddp/: ilqr.py  kinova_gen3.py  kinova_lift1.npz  opt_eq.py  panda_forward.npz  panda_fr3.py  panda_lift1.npz  panda_opt.py
src/drake_opt/drakerosfree/: CMakeLists.txt
src/drake_opt/drakerosfree/src/: franka_sim.cpp  opt_test.cpp  test.cpp
src/drake_opt/franka_description/meshes/visual/: mesh_utils.py
src/drake_opt/franka_description/urdf/: hand.urdf  panda.urdf  panda_arm_hand.urdf
src/drake_opt/manipulation_station/models/: cylinder.sdf
src/drake_opt/manipulation_station/models/table/: extra_heavy_duty_table_surface_only_collision.sdf
src/drake_opt/src/: drake_test_node.cpp
src/my_moveit_context/: CMakeLists.txt  package.xml
src/my_moveit_context/include/: context.h  my_moveit_context.h
src/my_moveit_context/src/: context.cpp  my_moveit_context.cpp
src/open3d_playground/: CMakeLists.txt  Draw.cpp  README.md
src/pick_and_place/: CMakeLists.txt  contact_control.xml  package.xml
src/pick_and_place/archive/: impedance_controller.cpp
src/pick_and_place/config/: contact_control.yaml  rosconsole.conf  sensors_3d.yaml
src/pick_and_place/gazebo/: box.world
src/pick_and_place/include/: contact_controller.h  contact_perception.h  contact_planner.h  impedance_controller.h  joint_position_controller.h  manipulability_measures.h  utilities.h  visualizer.h  visualizer_data.h
src/pick_and_place/launch/: generate_contact_plan.launch  generate_plan.launch  main.launch  moveit_baseline_plan.launch  octomap_server.launch  panda.launch
src/pick_and_place/plugins/: contact_control.xml
src/pick_and_place/rviz/: viz.rviz
src/pick_and_place/scripts/: cumulative_dist_func.py
src/pick_and_place/src/: broadcast_tf.cpp  contact_controller.cpp  contact_perception.cpp  contact_planner.cpp  generate_contact_plan.cpp  impedance_controller.cpp  joint_position_controller.cpp  moveit_baseline_plan.cpp  pick_and_place_node.cpp  publish_pc_bag.cpp  utilities.cpp  visualizer.cpp  visualizer_data.cpp
src/tacbot/: CMakeLists.txt  package.xml
src/tacbot/archive/: TrajExecutionMonitor.msg  benchmark_planners.cpp  contact_control.xml  contact_control.yaml  generate_contact_plan.cpp  impedance_controller.h  moveit_baseline_plan.cpp  traj_monitoring.cpp  visualization.cpp
src/tacbot/bags/: joint_states.json  states.json
src/tacbot/config/: sensors_3d.yaml
src/tacbot/gazebo/: box.world  table.STL
src/tacbot/include/: base_planner.h  common.h  contact_controller.h  contact_perception.h  contact_planner.h  joint_position_controller.h  manipulability_measures.h  panda_interface.h  perception_planner.h  utilities.h  visualizer.h  visualizer_data.h
src/tacbot/launch/: benchmark_planners.launch  generate_contact_plan.launch  knot_plan.launch  moveit_baseline_plan.launch  octomap_server.launch  panda.launch  plan_and_execute.launch
src/tacbot/rviz/: viz.rviz
src/tacbot/scripts/: benchmark_analysis.py  classicTRRT.csv  contactTRRT.csv  grasp.py  path_vis.py  per_link_upstream.py  solution_path.txt  traj_analysis_plotter.py  trrt_plotter.py  trrt_temp_plotter.py
src/tacbot/src/: base_planner.cpp  benchmark_planners.cpp  broadcast_tf.cpp  common.cpp  contact_controller.cpp  contact_perception.cpp  contact_planner.cpp  generate_contact_plan.cpp  joint_knot_plan.cpp  joint_position_controller.cpp  knot_plan.cpp  moveit_baseline_plan.cpp  panda_interface.cpp  perception_planner.cpp  plan_and_execute.cpp  publish_pc_bag.cpp  utilities.cpp  visualizer.cpp  visualizer_data.cpp
src/tacbot/urdf/common/: franka_arm.xacro  franka_robot.xacro  inertial.yaml  utils.xacro
src/tacbot/urdf/config/: arm.xacro  fake_controllers.yaml  joint_limits.yaml  panda.srdf.xacro
src/tacbot/urdf/fr3/: fr3.urdf.xacro  joint_limits.yaml
