<?xml version="1.0"?>
<package format="2">
  <name>tacbot</name>
  <version>0.0.0</version>
  <description>The tacbot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nataliya@todo.todo">nataliya</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tacbot</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend>interactive_markers</depend> -->
  <depend>moveit_core</depend>
  <!-- <depend>moveit_ros_planning</depend> -->
  <!-- <depend>moveit_ros_planning_interface</depend> -->
  <depend>moveit_ros_perception</depend>
  <!-- <depend>rviz_visual_tools</depend>
  <depend>moveit_visual_tools</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend> -->
  <!-- <depend>geometric_shapes</depend> -->
  <depend>moveit_planners_ompl</depend>
  <!-- <depend>message_generation</depend>
  <depend>realtime_tools</depend> -->
  <depend>roscpp</depend>
  <!-- <depend>rospy</depend> -->
  <!-- <depend>franka_hw</depend>
  <depend>franka_msgs</depend> -->
  <!-- <depend>hardware_interface</depend> -->
  <!-- <depend>eigen_conversions</depend> -->
  <!-- <depend>joint_limits_interface</depend> -->
  <depend>geometry_msgs</depend>
  <!-- <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend> -->
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>tf2</depend>
  <depend>tf2_ros</depend> -->
  <depend>pcl_ros</depend>

  <depend>trac_ik_lib</depend>
  <depend>nlopt</depend>

  <!-- <exec_depend>franka_control</exec_depend> -->
  <!-- <exec_depend>franka_description</exec_depend> -->

  <!-- <build_export_depend>message_runtime</build_export_depend> -->

  <build_depend>eigen</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export>
    <controller_interface plugin="${prefix}/plugins/contact_control.xml"/>
  </export> -->

</package>
